syntax = "proto3";
import "discovery.proto";

option csharp_namespace = "Sail.Grpc";

package sail.api.v1;

service ClusterDiscoveryService {
  rpc StreamClusters(stream DiscoveryRequest) returns (stream DiscoveryResponse) {
  }
}