syntax = "proto3";
import "google/protobuf/any.proto";

option csharp_namespace = "Sail.Grpc";
package sail.api.v1;

message DiscoveryRequest {
  string version_info = 1;
}

message DiscoveryResponse{
  string version_info = 1;
  repeated google.protobuf.Any resources = 2;
}